aws/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:330927539120:certificate/AKIAU2DGRQOYFJHJ7T4P
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
spec:
  rules:
    - host: api.trippin.com     # Route53에 연결할 도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service   # 팀원이 만든 Service 이름
                port:
                  number: 80
  tls:
    - hosts:
        - api.trippin.com
      secretName: my-app-tls  # cert-manager 쓸 때만 필요, ACM 쓰면 없어도 됨
